src/snapshots/rattler_build__conda_build_config__tests__conda_build_config__conda_forge_subset.yaml_true.snap
---
source: src/conda_build_config.rs
expression: config
---
pin_run_as_build: ~
zip_keys: ~
c_compiler:
  - clang
c_compiler_version:
  - "18"
c_stdlib:
  - macosx_deployment_target
c_stdlib_version:
  - "11.0"
cxx_compiler:
  - clangxx
cxx_compiler_version:
  - "18"
environment_var:
  - CF_CUDA_ENABLED
fortran_compiler_version:
  - "13"
llvm_openmp:
  - "18"
