src/snapshots/rattler_build__conda_build_config__tests__conda_build_config__test_1.yaml_none.snap
---
source: src/conda_build_config.rs
expression: config
---
pin_run_as_build: ~
zip_keys: ~
c_compiler:
  - clang
c_compiler_version:
  - "18"
other_stuff:
  - "123"
